--- a/dashboard.html
+++ b/dashboard.html
@@ -1,109 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WaLastSeen - Dashboard</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f6f8fa;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .dashboard-box {
-            background: #fff;
-            padding: 40px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-            width: 100%;
-            max-width: 500px;
-        }
-        h2 {
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .contact-status {
-            margin-bottom: 20px;
-        }
-        .contact-status p {
-            font-size: 18px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>WaLastSeen - Dashboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f6f8fa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: #fff;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+      width: 300px;
+      text-align: center;
+    }
+    h2 {
+      margin-bottom: 20px;
+    }
+    .contact {
+      margin-top: 20px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      margin-bottom: 10px;
+    }
+    .status {
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <div class="dashboard-box">
-        <h2>Welcome to WaLastSeen</h2>
-        <div id="contact1" class="contact-status">
-            <p>Contact 1: +19048464390</p>
-            <p>Status: <span id="status1">Loading...</span></p>
-        </div>
-        <div id="contact2" class="contact-status">
-            <p>Contact 2: +923440070803</p>
-            <p>Status: <span id="status2">Loading...</span></p>
-        </div>
+
+  <div class="container">
+    <h2>Welcome to WaLastSeen</h2>
+
+    <div class="contact">
+      <p>Contact 1: +19048464390</p>
+      <p id="contact1-status">Loading...</p>
     </div>
 
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+    <div class="contact">
+      <p>Contact 2: +923440070803</p>
+      <p id="contact2-status">Loading...</p>
+    </div>
+  </div>
 
-        // Firebase configuration
-        const firebaseConfig = {
-            apiKey: "AIzaSyB_8jnP9Yq5LhYnqFMwJ1G1dUjRqimJklk",
-            authDomain: "walastseen.firebaseapp.com",
-            projectId: "walastseen",
-            storageBucket: "walastseen.appspot.com",
-            messagingSenderId: "80496023280",
-            appId: "1:80496023280:web:3bea7627c6dcfcece59435"
-        };
+  <script type="module">
+    // Firebase App SDK
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
+    import { getFirestore } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
+    const firebaseConfig = {
+      apiKey: "AIzaSyB_8jnP9Yq5LhYnqFMwJ1G1dUjRqimJklk",
+      authDomain: "walastseen.firebaseapp.com",
+      projectId: "walastseen",
+      storageBucket: "walastseen.appspot.com",
+      messagingSenderId: "80496023280",
+      appId: "1:80496023280:web:3bea7627c6dcfcece59435"
+    };
 
-        // Function to check if the user is logged in
-        onAuthStateChanged(auth, (user) => {
-            if (user) {
-                // User is logged in
-                fetchContactStatus();
-            } else {
-                // No user is logged in, redirect to login page
-                window.location.href = "index.html";
-            }
-        });
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-        // Function to fetch the contact status from Firestore
-        async function fetchContactStatus() {
-            try {
-                const contact1DocRef = doc(db, "contactsStatus", "+19048464390");
-                const contact2DocRef = doc(db, "contactsStatus", "+923440070803");
-
-                const contact1Doc = await getDoc(contact1DocRef);
-                const contact2Doc = await getDoc(contact2DocRef);
-
-                if (contact1Doc.exists()) {
-                    document.getElementById("status1").textContent = contact1Doc.data().status || "Offline";
-                } else {
-                    document.getElementById("status1").textContent = "Status not found";
-                }
-
-                if (contact2Doc.exists()) {
-                    document.getElementById("status2").textContent = contact2Doc.data().status || "Offline";
-                } else {
-                    document.getElementById("status2").textContent = "Status not found";
-                }
-            } catch (error) {
-                console.error("Error fetching contact status: ", error);
-                document.getElementById("status1").textContent = "Error fetching status";
-                document.getElementById("status2").textContent = "Error fetching status";
-            }
+    // Fetch status function
+    function fetchStatus(phoneNumber) {
+      const statusRef = db.collection('contactsStatus').doc(phoneNumber);
+      statusRef.get().then((doc) => {
+        if (doc.exists) {
+          const status = doc.data().status;
+          document.getElementById(`${phoneNumber}-status`).innerText = `Status: ${status}`;
+        } else {
+          console.log("No such document!");
         }
-    </script>
+      }).catch((error) => {
+        console.log("Error getting document:", error);
+      });
+    }
+
+    // On page load, fetch status for both contacts
+    window.onload = function() {
+      fetchStatus("+19048464390");
+      fetchStatus("+923440070803");
+    };
+  </script>
+
 </body>
 </html>
