--- a/dashboard.html
+++ b/dashboard.html
@@ -4,55 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WaLastSeen - Dashboard</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f6f8fa;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .container {
-      text-align: center;
-      padding: 20px;
-      background: #fff;
-      border-radius: 10px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-    }
-    h1 {
-      margin-bottom: 20px;
-    }
-    .contact-info {
-      margin-bottom: 20px;
-    }
-    .contact-info p {
-      margin: 10px 0;
-    }
-    .loading {
-      font-style: italic;
-      color: gray;
-    }
-  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Welcome to WaLastSeen</h1>
-    <div id="contact1" class="contact-info">
-      <p>Contact 1: +19048464390</p>
-      <p id="status1" class="loading">Loading...</p>
-    </div>
-    <div id="contact2" class="contact-info">
-      <p>Contact 2: +923440070803</p>
-      <p id="status2" class="loading">Loading...</p>
-    </div>
+  <h1>Welcome to WaLastSeen</h1>
+  <div id="contact1">
+    <h3>Contact 1: +19048464390</h3>
+    <p>Status: <span id="status1">Loading...</span></p>
+  </div>
+  <div id="contact2">
+    <h3>Contact 2: +923440070803</h3>
+    <p>Status: <span id="status2">Loading...</span></p>
   </div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
-
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+  
+  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB_8jnP9Yq5LhYnqFMwJ1G1dUjRqimJklk",
       authDomain: "walastseen.firebaseapp.com",
@@ -62,23 +29,26 @@
       appId: "1:80496023280:web:3bea7627c6dcfcece59435"
     };
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    const app = firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore(app);
 
-    async function getContactStatus(contactId, statusElementId) {
-      const docRef = doc(db, "contactsStatus", contactId);
-      const docSnap = await getDoc(docRef);
+    // Function to get the status of contacts
+    async function getStatus(contactId, statusElement) {
+      const docRef = db.collection('contactsStatus').doc(contactId);
+      const doc = await docRef.get();
 
-      if (docSnap.exists()) {
-        const status = docSnap.data().status;
-        document.getElementById(statusElementId).textContent = "Status: " + status;
+      if (doc.exists) {
+        statusElement.innerText = doc.data().status;
       } else {
-        document.getElementById(statusElementId).textContent = "No status found.";
+        statusElement.innerText = "Not available";
       }
     }
 
-    getContactStatus("+19048464390", "status1");
-    getContactStatus("+923440070803", "status2");
+    // Fetch status for both contacts
+    window.onload = function() {
+      getStatus("+19048464390", document.getElementById('status1'));
+      getStatus("+923440070803", document.getElementById('status2'));
+    };
   </script>
 </body>
 </html>
