--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WhatsApp Last Seen Tracker</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <script type="module">
     // === FIREBASE SETUP ===
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
@@ -21,29 +23,103 @@
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    // === FETCH & DISPLAY LOGS ===
+    // === FILTER LOGS ===
+    const filterSelect = document.getElementById("filterSelect");
     const logContainer = document.getElementById("logs");
+    const sessionDetailsModal = document.getElementById("sessionDetailsModal");
+    const sessionDetailsContent = document.getElementById("sessionDetailsContent");
 
+    // Helper function to filter logs based on date
+    const filterLogs = (filterType) => {
+      let filterCondition;
+      const currentDate = new Date();
+      
+      if (filterType === 'today') {
+        const startOfDay = new Date(currentDate.setHours(0, 0, 0, 0));
+        filterCondition = query(collection(db, "whatsapp_log"), orderBy("timestamp", "desc"));
+      }
+      // Add conditions for Yesterday & Last 7 Days
+
+      return filterCondition;
+    };
+
+    // === FETCH & DISPLAY LOGS ===
     const q = query(collection(db, "whatsapp_log"), orderBy("timestamp", "desc"));
     onSnapshot(q, (snapshot) => {
-      logContainer.innerHTML = ""; // clear before update
+      logContainer.innerHTML = ""; // Clear before updating
       snapshot.forEach((doc) => {
         const data = doc.data();
         const entry = document.createElement("div");
         entry.innerHTML = `
-          <div style="margin-bottom:10px; padding:10px; border:1px solid #ccc; border-radius:8px;">
-            <b>Number:</b> ${data.number}<br>
-            <b>Status:</b> ${data.status}<br>
-            <b>Time:</b> ${data.timestamp}
+          <div class="log-entry">
+            <div><b>Number:</b> ${data.number}</div>
+            <div><b>Status:</b> ${data.status}</div>
+            <div><b>Time:</b> ${data.timestamp}</div>
+            <button class="view-session-btn" onclick="showSessionDetails(${data.number})">View Session Details</button>
           </div>
         `;
         logContainer.appendChild(entry);
       });
     });
+
+    // Show session details in modal
+    const showSessionDetails = (number) => {
+      sessionDetailsContent.innerHTML = `<h3>Session Details for ${number}</h3>`;
+      // Fetch session details and display them here
+      sessionDetailsModal.style.display = 'block';
+    };
+
+    // Close session details modal
+    const closeModal = () => {
+      sessionDetailsModal.style.display = 'none';
+    };
   </script>
+
+  <!-- Modal for session details -->
+  <style>
+    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); }
+    .modal-content { background-color: #fff; margin: 15% auto; padding: 20px; width: 60%; }
+    .log-entry { background: #f4f4f9; border-radius: 8px; padding: 10px; margin-bottom: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+    .view-session-btn { background-color: #5c6bc0; color: white; padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer; }
+    .view-session-btn:hover { background-color: #3f51b5; }
+    .filter { margin: 20px 0; }
+  </style>
+
 </head>
-<body style="font-family:sans-serif; background:#f9f9f9; padding:20px;">
-  <h2>📱 WhatsApp Last Seen Tracker</h2>
+<body style="font-family:sans-serif; background-color: #e8f5e9; padding:20px;">
+
+  <h2 style="font-size: 2em; color: #3b3b3b;">📱 WhatsApp Last Seen Tracker</h2>
+  
+  <!-- Filter Section -->
+  <div class="filter">
+    <label for="filterSelect">Filter logs by:</label>
+    <select id="filterSelect">
+      <option value="today">Today</option>
+      <option value="yesterday">Yesterday</option>
+      <option value="last7days">Last 7 Days</option>
+    </select>
+  </div>
+
+  <!-- Logs Section -->
   <div id="logs">Loading data...</div>
+
+  <!-- Session Details Modal -->
+  <div id="sessionDetailsModal" class="modal">
+    <div class="modal-content">
+      <h3>Session Details</h3>
+      <div id="sessionDetailsContent"></div>
+      <button onclick="closeModal()">Close</button>
+    </div>
+  </div>
+
+  <script>
+    // Make sure the modal closes when clicked outside of it
+    window.onclick = (event) => {
+      if (event.target == sessionDetailsModal) {
+        closeModal();
+      }
+    };
+  </script>
+
 </body>
 </html>
