--- a/dashboard.html
+++ b/dashboard.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WhatsApp Last Seen Tracker</title>
-  <!-- Bootstrap CSS -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  />
-  <!-- Chart.js -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- Firebase -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-app.js";
     import {
@@ -18,7 +13,7 @@
       collection,
       query,
       orderBy,
-      onSnapshot,
+      onSnapshot
     } from "https://www.gstatic.com/firebasejs/10.10.0/firebase-firestore.js";
 
     const firebaseConfig = {
@@ -28,16 +23,19 @@
       storageBucket: "YOUR_STORAGE_BUCKET",
       messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
       appId: "YOUR_APP_ID",
-      measurementId: "YOUR_MEASUREMENT_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    // Fetch and display logs
     const logContainer = document.getElementById("logs");
     const summaryContainer = document.getElementById("summary");
     const q = query(collection(db, "whatsapp_log"), orderBy("timestamp", "desc"));
+
+    const notificationSound = new Audio("https://notificationsounds.com/storage/sounds/file-sounds-1162-pristine.mp3");
+
+    let latestDocId = null;
 
     onSnapshot(q, (snapshot) => {
       logContainer.innerHTML = "";
@@ -46,23 +44,23 @@
 
       snapshot.forEach((doc) => {
         const data = doc.data();
-        if (!logsByNumber[data.number]) {
-          logsByNumber[data.number] = [];
-        }
-        logsByNumber[data.number].push(data);
+        if (!logsByNumber[data.number]) logsByNumber[data.number] = [];
+        logsByNumber[data.number].push({ ...data, id: doc.id });
       });
 
       for (const number in logsByNumber) {
         const logs = logsByNumber[number];
-        let onlineTime = null;
-        let totalDuration = 0;
-        let sessionCount = 0;
+        let onlineTime = null, totalDuration = 0, sessionCount = 0;
 
         logs.forEach((log) => {
           const currentTime = new Date(log.timestamp);
           let duration = "N/A";
 
           if (log.status === "online") {
+            if (log.id !== latestDocId) {
+              notificationSound.play();
+              latestDocId = log.id;
+            }
             onlineTime = currentTime;
           }
 
@@ -72,22 +70,17 @@
             const diffSec = Math.floor((diffMs % 60000) / 1000);
             duration = `${diffMin} min ${diffSec} sec`;
             totalDuration += diffMs;
-            sessionCount += 1;
+            sessionCount++;
             onlineTime = null;
           }
 
           const pktTime = currentTime.toLocaleString("en-PK", {
             timeZone: "Asia/Karachi",
-            hour: "numeric",
-            minute: "numeric",
-            hour12: true,
+            hour: "numeric", minute: "numeric", hour12: true
           });
-
           const etTime = currentTime.toLocaleString("en-US", {
             timeZone: "America/New_York",
-            hour: "numeric",
-            minute: "numeric",
-            hour12: true,
+            hour: "numeric", minute: "numeric", hour12: true
           });
 
           const entry = document.createElement("div");
@@ -101,8 +94,7 @@
                 Time (ET): ${etTime}<br />
                 Session Duration: ${duration}
               </p>
-            </div>
-          `;
+            </div>`;
           logContainer.appendChild(entry);
         });
 
@@ -129,13 +121,12 @@
       background-color: #333333;
       color: #ffffff;
     }
-    /* Analog Clock Styles */
     #analogClock {
-      width: 300px;
+      width: 100%;
+      max-width: 300px;
       height: 300px;
       margin: auto;
     }
-    /* Collapsible Log Table Styles */
     #logSidebar {
       position: fixed;
       top: 0;
@@ -162,16 +153,11 @@
 <body>
   <div class="container">
     <h1 class="mb-4">📱 WhatsApp Last Seen Tracker</h1>
-    <button class="btn btn-secondary mb-3" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-    <button class="btn btn-primary mb-3" onclick="exportCSV()">Export CSV</button>
-    <button class="btn btn-info mb-3" onclick="openLogSidebar()">View Logs</button>
+    <button class="btn btn-secondary mb-3" onclick="document.body.classList.toggle('dark-mode')">Toggle Dark Mode</button>
     <div id="summary"></div>
     <div id="logs">Loading data...</div>
-    <!-- Analog Clock Visualization -->
-    <div id="analogClock">
-      <!-- Implement SVG or Canvas-based analog clock here -->
-      <!-- For example, you can use the SVG clock from CodePen: https://codepen.io/udyux/pen/VeKeEm -->
-    </div>
-    <!-- Timeline
-::contentReference[oaicite:9]{index=9}
- 
+    <div id="analogClock"></div>
+  </div>
+</body>
+</html>
+
